Fix divider z-index and reach default flip

--- a/assets/scss/components/blocks/_divider.scss
+++ b/assets/scss/components/blocks/_divider.scss
@@ -21,7 +21,6 @@
 
 .wp-block-cover,
 .wp-block-group {
-	--divider-z-index: -1;
 	--divider-position: relative;
 }
 
